--- a/CodigoFonte/02-Primeiro Hello World/HelloWorld.html
+++ b/CodigoFonte/02-Primeiro Hello World/HelloWorld.html
@@ -11,6 +11,7 @@
   <script src="https://unpkg.com/react@18/umd/react.development.js"></script> <!-- Responsável por importar o React no projeto. OBS: importante estar tanto o DOM quanto o react na mesma versão. -->
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
   <script type="text/babel">
     ReactDOM.createRoot(document.getElementById('root')).render(
